# jarvis

./: .gitignore  README.md  joey-trigger  joey.py  joey_ui.py  pyproject.toml  run.sh
.github/: FUNDING.yml
scripts/: download_models.sh  record_demo.sh
systemd/: joey-mic-level.service  joey.service
